# mBot

./: mBot.slnx
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: integration-tests.yml
src/AppHost/: AppHost.cs  AppHost.csproj
src/AppHost/Properties/: launchSettings.json
src/BuildingBlocks/Common/: ChatMessage.cs
src/BuildingBlocks/Contracts/: StartAgentContract.cs
src/BuildingBlocks/Shared/Common/: ChatContext.cs  ChatMessage.cs  ReferencedMessage.cs
src/BuildingBlocks/Shared/Contracts/: AgentChunkContract.cs  AgentErrorContract.cs  AgentResultContract.cs  AgentStartContract.cs  StartAgentContract.cs
src/ServiceDefaults/: Extensions.cs  ServiceDefaults.csproj
src/Services/Agent/: .gitignore  README.md  main.py  pyproject.toml
src/Services/Agent/contracts/: __init__.py  agent_chunk_contract.py  agent_error_contract.py  agent_result_contract.py  agent_start_contract.py  start_agent_contract.py
src/Services/Agent/contracts/common/: __init__.py  chat_context.py  referenced_message.py
src/Services/Agent/services/: __init__.py  basic_agent.py  broker.py
src/Services/Agent/services/consumers/: agent_start_consumer.py
src/Services/Agent/services/publishers/: __init__.py  agent_chunk_publisher.py  agent_error_publisher.py  agent_result_publisher.py
src/Services/Agent/utils/: __init__.py  instruction.py
src/Services/Bot/Bot.Application/: Bot.Application.csproj  Extensions.cs
src/Services/Bot/Bot.Core/: Bot.Core.csproj
tests/GatewayIntegrationTests/: AspireFixture.cs  GatewayIntegrationTests.csproj  GuildServiceTests.cs
(+50 files in other folders)
